# archilume

./: .code-review-graphignore  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  ROADMAP.md  commit_message.txt  conftest.py  docker-compose-team.yml  docker-compose.yml  output_image_X.unf  outputsimagestest_output.hdr  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: reflex-audit.md  triage-async-race.md  triage-css-dom.md  (+2 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.docker/: Caddyfile  Dockerfile  README.md  _launch-archilume.ps1  build-dist-zip.ps1  docker-bake.hcl  docker-compose-archilume.yml
.ssh/: config.template
aoi/: U101_2_BED.aoi  U101_T.aoi  U102_3_BED.aoi  U102_T.aoi  U103_4_BED.aoi  U103_T.aoi  U104_4_BED.aoi  U104_T.aoi  U201_3_BED.aoi  U201_T.aoi  U202_2_BED.aoi  U202_T.aoi  U203_4_BED.aoi  U203_T.aoi  U204_3_BED.aoi  U204_T.aoi  U301_3_BED.aoi  U301_T.aoi  U302_4_BED.aoi  U302_T.aoi  U401_4_BED.aoi  U401_T.aoi  UG01_2_BED_1BED_SOHO.aoi  UG01_T.aoi  UG02_3_BED.aoi  UG02_T.aoi  UG03_1_BED.aoi  UG03_T.aoi  UG04_3_BED_2BED_SOHO.aoi  UG04_T.aoi
archilume/: __init__.py  __main__.py  _template_dataclass.py  accelerad_renderer.bat  accelerad_rpict.bat  accelerad_rpict.ps1  accelerad_rpict.py  accelerad_rpict_batch.bat  add_missing_modifiers.py  config.py  convert_2_radiance_mtl_file.py  create_radiance_mtl_file.py  gcloud_setup.py  gcp_vm_manager.py  generate_view_files.py  geometry_utils.py  get_modifiers.py  hdr2wpd.py  hdr_aoi_editor.py  ifc_strip.py  image_processor.py  material_conversions.py  mtl_converter.py  obj2boundaries.py  obj2rad_test.py  obj2room_boundaries.py  obj_aoi_editor.py  obj_boundary_editor.py  obj_boundary_editor_v2.py  obj_cleaner.py  obj_inspect.py  obj_inspector.py  obj_to_octree.py  obj_viewer.py  objs2octree.py  octree_viewer.py  project.py  pyrad_parallel.py  rad_utils.py  radiance_materials.py  (+17 more)
archilume.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker/: Dockerfile  README.md  _launch-archilume.ps1  build-dist-zip.ps1  build-zip.ps1  docker-bake.hcl  docker-compose-archilume.yml  launch-archilume.cmd  launch-archilume.command  launch-archilume.ps1  launch-archilume.sh
docs/: GCP_VM_ACCESS.md  LARGE_OBJ_GUIDE.md  archilume_app_gap_report.md  archilume_app_spec.md  archilume_ui_gap_report.md  archilume_ui_spec.md  dash_editor_ui_spec.md  matplotlib_editor_ui_spec.md  radiance_scratchpad.md
examples/: 04_render_scenes_rpict.py  ASE_in_rooms_winter_solstice.py  DOCKER_GCP_TRANSITION_PLAN.md  Radiance_testpad.py  aoi_editing_obj.py  aoi_editor_iesve.py  aoi_editor_obj.py  aoi_editor_obj_v2.py  build_docker_images.py  clean_images_folder.py  clean_output_folder.py  daylight_iesve.py  daylight_workflow_iesve.py  daylight_workflow_obj.py  gcp_launch_vm.py  hdr_aoi_editor.py  iesve_daylight_parallel_images.py  ifc_strip.py  image_aoi_annotator.py  launch_archilume_app.py  launch_archilume_ui.py  launch_dash_editor.py  launch_google_cloud_vm.py  launch_hdr_editor.py  launch_obj_editor.py  obj2room_boundaries.py  obj_aoi_editor.py  obj_checks.py  obj_clean.py  obj_viewer.py  octreee_viewer.py  radiance_testpad.py  render.bat  render_scene_using_radiance_binaries.py  room_boundaries_editor.py  room_boundary_editor.py  scrub_images.py  scrub_outputs.py  summer_solstice_shd_analysis.py  summer_solstice_solar_gains.py  (+10 more)
tests/: debug_obj_to_rad.py  test_aoi_v2.py  test_batch_debug.bat  test_floor_finish_extraction.py  test_gcp_vm_manager.py  test_geo_ifc_inspector.py  test_geo_ifc_strip.py  test_geo_obj2boundaries.py  test_geo_obj_cleaner.py  test_geo_obj_inspector.py  test_geometric_calculations.py  test_material_parsing.py  test_mtl_converter.py  test_objs2octree.py  test_post_apng2mp4.py  test_post_hdr2png.py  test_post_hdr2wpd.py  test_post_hdr_to_png.py  test_post_hdr_visualisation.py  test_post_tiff2animation.py  test_radiance_materials.py  test_render_view_with_warmup.py  test_sky_generator.py  test_view_generator.py  test_workflows.py
(+246 files in other folders)
