[project]
name = "archilume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cairosvg>=2.8.2",
    "ifcopenshell>=0.8.3.post1",
    "lxml>=6.0.2",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.6.0",
    "psutil>=7.0.0",
    "pymupdf>=1.24.0",
    "pyradiance>=1.2.0",
    "pyvista>=0.46.4",
    "reflex>=0.8.28.post1",
    "scikit-image>=0.25.2",
    "selenium>=4.41.0",
    "svg2png>=1.2",
    "svglib>=1.6.0",
    "svgpathtools>=1.7.2",
    "vtk>=9.6.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["archilume*"]
exclude = ["inputs*", "outputs*", "intermediates*"]

[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "pytest>=8.4.1",
]

