[project]
name = "archilume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "pandas>=2.3.1",
    "pymupdf>=1.24.0",
    "scikit-image>=0.25.2",
    "psutil>=7.0.0",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["archilume*"]
exclude = ["inputs*", "outputs*", "intermediates*"]

[dependency-groups]
app = [
    "reflex>=0.8.28.post1",
]
engine = [
    "fastapi>=0.135.3",
    "uvicorn>=0.34.0",
    "ifcopenshell>=0.8.3.post1",
    "pyradiance>=1.2.0",
    "matplotlib>=3.8.0",
    "opencv-python-headless>=4.11.0.86",
    "lxml>=6.0.2",
]
desktop = [
    "pyvista>=0.46.4",
    "vtk>=9.6.0",
    "selenium>=4.41.0",
    "cairosvg>=2.8.2",
    "svglib>=1.6.0",
    "svgpathtools>=1.7.2",
    "svg2png>=1.2",
    "plotly>=6.6.0",
]
dev = [
    "coverage>=7.10.3",
    "pytest>=8.4.1",
]

[tool.uv]
default-groups = ["app", "engine", "desktop", "dev"]